--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
+    "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
