--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest-expo": "~41.0.0",
     "prettier": "^2.3.1",
+    "react-native-dotenv": "^2.5.5",
     "typescript": "~4.0.0"
   },
   "jest": {
